# CalcGTest

./: CMakeLists.txt  ICalculator.h  SimpleCalculator.cpp  SimpleCalculator.h
.github/workflows/: ci.yaml
tests/: CMakeLists.txt  calculator_test.cpp  history_test.cpp  mocks.h
